@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 ea1084c7fe3b0f61bf8d9b586414ce89f2e7bfb8 ChangeLog
+SHA1 c567e81d99cdff57caf5417634fc5a283b7239b6 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 7a46d31f83af657eccb5f74695f219bc5f0283d1 META.yml
-SHA1 ce5208f252bc37aad2e834007fe6b6b8089fa300 MYMETA.json
-SHA1 37deca257589e743b3fce30195b75444cb98806a MYMETA.yml
-SHA1 542bc24e4ebc9140da8b5254701f7b884071ce02 Makefile.PL
+SHA1 cc286eb1c11469eef83b6ab784496730540232dc META.yml
+SHA1 a8c7c92319023cdae41cabe24a40285b44fc26d6 MYMETA.json
+SHA1 36a2a13486de806000079f4a3107597e886036c7 MYMETA.yml
+SHA1 62ba58c5303d4ab601aaa900569957796ebd8d46 Makefile.PL
 SHA1 cbcb130fc9fe3f4d4dd8263e7b4ee4b39b182bd1 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 39cf02b95d140e1dd95b4c7486b225f29eacb90a bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 f1dd82c16fc6894c7949d64c481782cfed7a59b0 install_mozrepl_plugin.ahk
-SHA1 0e56b6a30c7a0728792a70812ba836419b6d22da lib/Net/FullAuto.pm
+SHA1 28ee3adb620db9ed9cc0b7ef27239107580f9eb6 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 b2282d66e77abab818cb5c894e164f82db09b720 lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,7 +56,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlDjWjQACgkQJM3IZYB6aOolYgCfe12OS8pjXUv4eBe5fPJ7Nsr7
-Y9UAn2C82kUnnGuLMi7LtUWdKWCFTMGG
-=f9qg
+iEYEARECAAYFAlDkOA8ACgkQJM3IZYB6aOqpUwCePALgYHsCDRi0e2ddXFvlDHw9
+e28AoIIfH3IiLDBomYHc3cXxEnmunD7e
+=kUEo
 -----END PGP SIGNATURE-----
