@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999958';
+our $VERSION='0.999959';
 
 
 use 5.005;
